<resources>
    <string name="app_name">우리빌</string>
    <string name="login_email">계정으로 로그인 하기</string>
    <string name="DoLogin">로그인 하기</string>
    <string name="login">로그인</string>
    <string name="ID">아이디</string>
    <string name="searchID">아이디 찾기</string>
    <string name="searchPW">비밀번호 찾기</string>
    <string name="changePW">비밀번호 변경</string>
    <string name="changePhoneNumber">전화번호 변경</string>
    <string name="signUp">회원가입</string>
    <string name="signOut">탈퇴하기</string>
    <string name="userType">가입유형</string>
    <string name="tenant">세입자</string>
    <string name="mgr">관리자</string>
    <string name="signUpDone">가입 완료</string>
    <string name="Cancel">취소</string>
    <string name="Done">완료</string>
    <string name="villaInfoInsert">빌라등록하기</string>
    <string name="Insert">등록하기</string>
    <string name="Update">수정하기</string>
    <string name="Delete">삭제하기</string>
    <string name="villaAddress">건물주소</string>
    <string name="villaDetailAddress">상세주소(동,호수 등)</string>
    <string name="villaName">건물명</string>
    <string name="villaAlias">건물별칭</string>
    <string name="villaTenantCount">입주 가능 가구수</string>
    <string name="villaParkCount">주차 가능 대수</string>
    <string name="villaElevator">엘리베이터</string>
    <string name="smsAuthentication">인증번호</string>
    <string name="smsAuthComplete">인증완료</string>
    <string name="willChangePw">변경할 비밀번호</string>
    <string name="willChangePwCheck">확인할 비밀번호</string>
    <string name="willChangePhoneNum">변경할 전화번호</string>
    <string name="willChangePhoneNumCheck">확인할 전화번호</string>
    <string name="mgrPassword">관리자 비밀번호</string>
    <string name="addrSearch">주소검색</string>
    <string name="tenantTotal">입주현황</string>
    <string name="tenantCurrentCount">입주수</string>
    <string name="tenantTotalCount">전체입주수</string>
    <string name="villaNotice">공지사항</string>
    <string name="Notice">공지</string>
    <string name="noticeContent">공지내용</string>
    <string name="noticeWrite">등록하기</string>
    <string name="villaNoticeTitle">공지사항제목</string>
    <string name="villaNoticeTime">공지일시</string>
    <string name="mgrCost">관리비</string>
    <string name="mgrAccountTitle">관리비계좌보기</string>
    <string name="mgrAccountbt">관리비\n계좌보기</string>
    <string name="mgrCostCal">관리비\n계산하기</string>
    <string name="mgrCostForRoom">공동이용료내역</string>
    <string name="TotalRoomCost">비용 합계 : </string>
    <string name="mgrCostYearMonth">관리비년월</string>
    <string name="mgrAccountAdd">관리비계좌등록</string>
    <string name="mgrStandardCostAdd">기준관리비등록</string>
    <string name="tonCost">톤당금액</string>
    <string name="waterCost">수도료</string>
    <string name="cleanCost">청소비</string>
    <string name="usunCost">유선비</string>
    <string name="mgrAddAccount">수납계좌등록</string>
    <string name="AddAccount">계좌등록</string>
    <string name="selectBank">은행선택</string>
    <string name="BankHint">은행을 선택해 주세요.</string>
    <string name="AccountHolder">예금주명</string>
    <string name="AccountNumber">계좌번호</string>
    <string name="mgrAccountNone">등록된 계좌가 없습니다.</string>

    <string name="ContractDate">계약일</string>
    <string name="LeaveDate">만료일</string>
    <string name="roomNumber">호수</string>
    <string name="tenantIOEmail">세입자계정</string>
    <string name="tenantIOName">세입자이름</string>
    <string name="tenantIOPhone">세입자전화번호</string>
    <string name="tenantIONameHint">세입자가 전입요청시 자동입력됩니다.</string>
    <string name="addVillaRoomNumber">빌라가구 등록하기</string>
    <string name="tenantInOut">가구 전입,퇴거 하기</string>
    <string name="tenantIn">가구 전입</string>
    <string name="requestTenant">전입요청</string>
    <string name="tenantOut">퇴거 하기</string>
    <string name="tenantRequestNull">전입 요청이 없습니다.</string>
    <string name="tenantRequestAddr">전입할 주소를 검색해주세요.</string>
    <string name="tenantRequestQuestion">선택한 곳으로 전입하시겠습니까?</string>

    <string name="user_email">이메일</string>
    <string name="user_name">이름</string>
    <string name="user_password">비밀번호</string>
    <string name="user_phone">휴대전화번호</string>
    <string name="terms_of_use">이용약관</string>
    <string name="all_terms_check">전체동의</string>
    <string name="necessary_terms_agree">[필수]약관 및 이용동의</string>
    <string name="confirm_terms_agree">[약관 및 이용동의 확인]</string>
    <string name="necessary_privacy_policy">[필수]개인정보처리방침</string>
    <string name="confirm_privacy_policy">[개인정보처리방침 확인]</string>

    <string name="myInfoTitle">전체정보</string>
    <string name="myInfo">내 정보</string>
    <string name="myIdInfo">계정정보</string>
    <string name="CustomerCenter">고객센터</string>
    <string name="TermsAndPolicies">약관 및 정책</string>
    <string name="privacy_policy">개인정보보호정책</string>
    <string name="etc">기타</string>
    <string name="version">버전정보</string>


    <string name="user_email_hint">이메일을 입력해주세요</string>
    <string name="user_name_hint">이름을 입력해주세요</string>
    <string name="user_password_hint">비밀번호를 입력해주세요(최소6자리)</string>
    <string name="user_password_hint2">비밀번호를 한번 더 입력해주세요</string>
    <string name="user_phone_hint">"'-'"없이 숫자만입력하세요</string>
    <string name="user_phone_hint2">인증번호를 입력해주세요</string>
    <string name="ur_id">회원님의 아이디는</string>
    <string name="is">입니다.</string>
    <string name="villa_Name_Hint">주소선택에서 자동으로 입력됩니다.</string>
    <string name="villa_Tenant_Count_Hint">총 가구수를 입력해 주세요.</string>
    <string name="villa_Park_Count_Hint">총 주차공간 수를 입력해 주세요.</string>
    <string name="addr_Search_Hint">주소/도로명/건물명 검색3자이상</string>

    <string name="must_insert">필수 입력항목 입니다!</string>
    <string name="wrong_insert">형식이 올바르지 않습니다.</string>
    <string name="not_insert_num">숫자는 입력할 수 없습니다.</string>
    <string name="not_enough_num">최소 6자리 이상입니다.</string>
    <string name="match_password">비밀번호가 일치합니다.</string>
    <string name="not_match_password">비밀번호가 일치하지 않습니다.</string>
    <string name="welcome_mgr_app">환영합니다. \n mgr_villa 회원가입이 완료되었습니다.</string>
    <string name="SignOut_mgr_app">탈퇴하시겠습니까? \n [모든 정보가 삭제 됩니다!](복구 불가능)</string>

    <string name="naver_client_id">NJrt6Ht1CE5xqoouwaIq</string>
    <string name="naver_client_secret">Jc4B24yJvN</string>
    <string name="naver_client_name">MGR_VILLA</string>

    <string name="naver_login">네이버 로그인</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="google_login">구글 로그인</string>


    <string name="textsize">25sp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
