<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.chauthai.swipereveallayout.SwipeRevealLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dragEdge="right"
        app:mode="same_level">

        <!--스와이프 레이아웃-->
        <LinearLayout
            android:id="@+id/RequestTenant_Slide"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/RequestTenantDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingHorizontal="40dp"
                android:src="@drawable/ic_delete" />


        </LinearLayout>

        <!--메인 레이아웃-->
        <LinearLayout
            android:id="@+id/RequestTenantLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:background="@color/white"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/RequestId"
                    android:layout_width="10dp"
                    android:layout_height="100dp"
                    android:textColor="@color/black"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/RequestTenantEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tenantIOEmail"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/RequestTenantName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tenantIOName"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/RequestTenantPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tenantIOPhone"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:gravity="bottom"
            >
            <View
                android:id="@+id/AccountsBottomLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="2dp"
                app:layout_constraintTop_toBottomOf="@+id/TenantRoomNum"
                android:background="@drawable/background_underline" />
        </LinearLayout>




    </com.chauthai.swipereveallayout.SwipeRevealLayout>

</layout>