<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    <com.chauthai.swipereveallayout.SwipeRevealLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:dragEdge="right"-->
<!--        app:mode="same_level">-->


<!--        &lt;!&ndash;스와이프 레이아웃&ndash;&gt;-->
<!--        <LinearLayout-->
<!--            android:id="@+id/CostTenant_UD_Slide"-->
<!--            android:layout_width="130dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="horizontal">-->

<!--            <ImageView-->
<!--                android:id="@+id/tenantDelete"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:paddingHorizontal="20dp"-->
<!--                android:src="@drawable/ic_delete" />-->

<!--            <ImageView-->
<!--                android:id="@+id/tenantUpdate"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:paddingHorizontal="20dp"-->
<!--                android:src="@drawable/ic_create_write" />-->

<!--        </LinearLayout>-->

        <!--메인 레이아웃-->
        <LinearLayout
            android:id="@+id/TenantRoomNumLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:background="@color/white"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/CostTenantRoomId"
                    android:layout_width="10dp"
                    android:layout_height="100dp"
                    android:textColor="@color/black"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/CostContractDate"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ContractDate"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/CostLeaveDate"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaveDate"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"
                    android:textSize="20sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/CostTenantTitle"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/roomNumber"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30sp" />

            </LinearLayout>

<!--            <View-->
<!--                android:id="@+id/CostNoticeBottomLine"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_margin="2dp"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/TenantRoomNum"-->
<!--                android:background="@drawable/background_underline" />-->
        </LinearLayout>






<!--    </com.chauthai.swipereveallayout.SwipeRevealLayout>-->

</layout>